# xbox_math3d

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: xbox_math_d3d.cpp  xbox_math_d3d.h  xbox_math_frustum.cpp  xbox_math_frustum.h  xbox_math_matrix.cpp  xbox_math_matrix.h  xbox_math_quaternion.cpp  xbox_math_quaternion.h  xbox_math_types.cpp  xbox_math_types.h  xbox_math_util.cpp  xbox_math_util.h  xbox_math_vector.cpp  xbox_math_vector.h
test/: CMakeLists.txt  d3d_tests.cpp  matrix_tests.cpp  matrix_vector_tests.cpp  test_main.cpp  types_tests.cpp  util_tests.cpp  vector_tests.cpp
